# salmoncv

./: .gitignore  CHANGELOG.md  README.md  coral_timelapse_cli_camera.py  gpio_probe.py.save  mkdocs.yml  prompt.txt  pyproject.toml  requirements.txt  temp.py  test_sensor.py
.github/workflows/: docs.yml  tests.yml
docs/: fish_counts_project_chat_history.md  flash_os_set_pi_config.txt  hotspot-setup.md  raspberry_pi_coral_tpu_pyenv_setup.md  salmoncv_chronological_development_log.md  salmoncv_technical_design_document.md  usage-guide.md
docs_site/: auto-start.md  camera.md  changelog.md  coral-tpu-setup.md  development-log.md  getting-started.md  hotspot.md  index.md  lights.md  pi-setup.md  power.md  sensors.md  starlink.md  storage.md  technical-design.md  troubleshooting.md  web-dashboard.md
scripts/: install_service.sh  revert_hotspot.sh  setup_hotspot.sh  snapshot.sh
src/salmoncv/: __init__.py  camera.py  lights.py  power.py  sensors.py  starlink.py  storage.py  watchdog.py
src/salmoncv/web/: app.py
src/salmoncv/web/static/: salmoncv.js  style.css
src/salmoncv/web/templates/: base.html  camera.html  dashboard.html  gallery.html  monitor.html  pi_power.html  power.html  sensors.html  settings.html
sys/: apt_packages.txt  camera_stack.txt  cpu_info.txt  disk_info.txt  memory_info.txt  network_info.txt  pi_cpuinfo.txt  system_info.txt
tests/: conftest.py  test_camera.py  test_lights.py  test_starlink.py  test_storage.py  test_watchdog.py  test_web.py
