[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salmoncv"
version = "0.1.0"
description = "Salmon tracking with Raspberry Pi and Google Coral TPU"
requires-python = ">=3.9"
dependencies = [
    "Pillow",
    "numpy==1.26.4",
    "tflite-runtime",
    "pycoral~=2.0",
    "gpiozero",
    "RPi.bme280",
    "smbus2",
]

[project.scripts]
salmoncv-camera = "salmoncv.camera:main"
salmoncv-power = "salmoncv.power:main"
salmoncv-sensors = "salmoncv.sensors:main"
salmoncv-probe = "salmoncv.gpio_probe:main"
