[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salmoncv"
version = "0.1.0"
description = "Salmon tracking with Raspberry Pi and Google Coral TPU"
requires-python = ">=3.9"
dependencies = [
    "Pillow",
    "numpy==1.26.4",
    "astral",
    "flask",
]

[project.optional-dependencies]
pi = [
    "tflite-runtime",
    "pycoral~=2.0",
    "RPi.bme280",
    "smbus2",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
salmoncv-camera = "salmoncv.camera:main"
salmoncv-power = "salmoncv.power:main"
salmoncv-sensors = "salmoncv.sensors:main"
salmoncv-probe = "salmoncv.gpio_probe:main"
salmoncv-lights = "salmoncv.lights:main"
salmoncv-starlink = "salmoncv.starlink:main"
salmoncv-watchdog = "salmoncv.watchdog:main"
salmoncv-web = "salmoncv.web.app:main"
